<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_button_label">Settings</string>
    <string name="calendar_button_label">Calendar</string>
    <string name="set_start_date">Change start date</string>
    <string name="reverse_week">Reverse one week</string>
    <string name="push_notice_label">Reminder</string>
    <string name="set_time">Set time</string>
    <string name="set_first_notice">Set first notice</string>
    <string name="set_second_notice">Set second notice</string>
    <string name="set_third_notice">Set third notice</string>
    <string name="set_fourth_notice">Set fourth notice</string>
    <string name="no_values_found_this_date">No data on this date</string>

    <!--constants-->
    <string name="app_name">Grays Cleansing Program</string>
    <string name="fragment_start">fragment_start</string>
    <string name="calendar_fragment">calendar_fragment</string>
    <string name="medication_fragment">medication_fragment</string>
    <string name="settings_fragment">settings_fragment</string>
    <string name="date_intent">date_intent</string>
    <string name="no_data_on_date_dialog">no_data_on_date_dialog</string>
    <string name="set_startdate_boolean">set_startdate_boolean</string>
    <string name="set_start_date_dialog">set_start_date_dialog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="set_start_date_button_label">Set this date to start date</string>
    <string name="set_start_date_cancel_button_label">Cancel</string>
    <string name="saved_start_date">saved_start_date</string>
    <string name="saved_start_date_msg">You have saved %s</string>
    <string name="start_title">Today's program</string>
    <string name="start_medication_title">Medication today</string>
    <string name="start_bulk_amount">Bulk: %d tsp</string>
    <string name="start_pill_amount">Pills: %s</string>
    <string name="start_day_of_progress">Progress: %d days</string>
    <string name="start_frequency">%d times a day</string>
    <string name="medication_day">Day: %d</string>
    <string name="start_fase">Fase: %s</string>
    <string name="start_no_program_today">No program to follow today</string>
    <string name="checkmark">\u2713"</string>
    <string name="start_first_med">First dose</string>
    <string name="start_second_med">Second dose</string>
    <string name="start_third_med">Third dose</string>
    <string name="start_fourth_med">Fourth dose</string>
    <string name="took_first_medication">took_first_medication</string>
    <string name="took_second_medication">took_second_medication</string>
    <string name="took_third_medication">took_third_medication</string>
    <string name="took_fourth_medication">took_fourth_medication</string>
    <string name="date_of_toggle">date_of_toggle</string>
    <string name="toggle_state_untoggled">Unchecked dose, sure?</string>
    <string name="undo_string">UNDO</string>
    <string name="time_picker_fragment">time_picker_fragment</string>
    <string name="time_picker_label">Set time</string>
</resources>